syntax = "proto3";
package elf_store.v1;

service ElfStore {
  // Store an ELF program in the db
  rpc StoreElf(StoreElfRequest) returns (StoreElfResponse) {}
  
  // Retrieve an ELF program by its program ID
  rpc GetElf(GetElfRequest) returns (GetElfResponse) {}
}

message StoreElfRequest {
  bytes program_id = 1;
  bytes program_elf = 2;
  int32 vm_type = 3;
}

message StoreElfResponse {
  bool success = 1;
}

message GetElfRequest {
  bytes program_id = 1; 
}

message GetElfResponse {
  bytes program_elf = 1;
  int32 vm_type = 2;
} 